# surface-sim

./: .flake8  .gitignore  CITATION.cff  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: actions.yaml  ci_pipeline.yaml  manual_ci_pipeline.yaml
docs/: building_noisy_circuits.md  creating_a_Setup_object.md  structure_logical_circuit.md
docs/setup_examples/: circ_level_noise.yaml  device_specific_noise.yaml
docs/source/: api.rst  conf.py  index.rst  intro.rst  user_guide.rst
docs_old/: creating_a_Setup_object.md  structure_logical_circuit.md
profile/: generate_arbitrary_circuit.py  profile.sh  speed_bottleneck.ipynb
surface_sim/: __init__.py
surface_sim/circuit_blocks/: __init__.py  decorators.py  repetition_code.py  rot_surface_code_css.py  rot_surface_code_css_pipelined.py  rot_surface_code_xzzx.py  rot_surface_code_xzzx_google.py  rot_surface_code_xzzx_pipelined.py  small_stellated_dodecahedron_code.py  surface_code_css.py  surface_code_css_pipelined.py  surface_code_xzzx.py  surface_code_xzzx_google.py  unrot_surface_code_css.py  util.py
surface_sim/detectors/: detectors.py
surface_sim/experiments/: __init__.py  arbitrary_experiment.py  repetition_code.py  rot_surface_code_css.py  rot_surface_code_css_pipelined.py  rot_surface_code_xzzx.py  rot_surface_code_xzzx_google.py  rot_surface_code_xzzx_pipelined.py  small_stellated_dodecahedron_code.py  surface_code_css.py  surface_code_css_pipelined.py  surface_code_xzzx.py  surface_code_xzzx_google.py  (+3 more)
tests/: test_docs.py  test_readme_example.py  test_tests.py
(+68 files in other folders)
