[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "surface-sim"
description = "Suface code simulations package" 
version = "0.10.1"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" },
    { name = "Boris Varbanov", email = "b.m.varbanov@gmail.com"}
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" },
]
license = "MIT"
readme = "README.md"
dependencies = [
    "numpy >= 1.26.4", # for Python 3.12
    "xarray",
    "networkx",
    "scipy", # required by netwokx but not automatically installed by pip
    "matplotlib",
    "PyYAML",
    "netCDF4",
    "stim >= 1.15.0", # for 'II' gate and 'Circuit.pop'
    "galois",
]
keywords = ["quantum", "error correction", "surface code", "stabilizer simulation"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["surface_sim", "surface_sim.*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = ["pip-tools>=7.5.3", # older versions are incompatible with newer pip versions
       "pytest",
       "ruff",
       "gprof2dot",
       "sphinx", "sphinx-rtd-theme", "numpydoc", "pydata_sphinx_theme", "sphinx_design"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201", "T203"]
ignore = ["E741", "E731", "E501"]
